wip: faq alignment fix

--- a/src/styles/comments.css
+++ b/src/styles/comments.css
@@ -12,9 +12,12 @@ div.comment-box {
 }
 div.review-box {
     height: 22em;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
 }
 div.question {
-    margin-top: 2em;
     margin-left: 2em;
     margin-right: 2em;
     text-align: center;
@@ -26,7 +29,7 @@ div.question {
 }
 div.answer {
     text-transform: capitalize;
-    margin-top: 1.2em;
+    margin-top: 10px;
     margin-left: 4em;
     margin-right: 4em;
     text-align: center;
@@ -55,7 +58,6 @@ div.carousel-indicators {
     }
     div.question {
         font-size: 17px;
-        margin-top: 2.5em;
     }
     div.answer {
         font-size: 13px;
